@@ -499,6 +499,7 @@ void toolbar_apply_settings(void)
 	/* sets the icon style of the toolbar */
 	switch (toolbar_prefs.icon_style)
 	{
+		default:
 		case GTK_TOOLBAR_BOTH:
 		{
 			/*gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(ui_lookup_widget(main_widgets.window, "images_and_text1")), TRUE);*/
