@@ -1,3 +1,10 @@
+2009-10-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/prefs.h, src/search.h, src/support.h, src/templates.h,
+   src/toolbar.c, src/toolbar.h:
+   Add missing dox for types/files in the API.
+
+
 2009-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * plugins/saveactions.c:
